deploy/manifests/rijksoverheid/base/burger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
